# axis1.4

./: README.md  build.xml
c/: configure.ac
c/deploy/: axiscpp.conf_linux  axiscpp.conf_sample
c/deploy/wsdls/: InteropBase.wsdl  InteropGroupB.wsdl
c/docs/: lininstall-guide.html  linuser-guide.html  winuser-guide.html
c/docs/apidocs/: README  doxygenconf
c/docs/linux/: installation_guide_linux.html  lindev-guide.html  lininstall-guide.html  linuser-guide.html  userguide_linux.html
c/docs/windows/: windev-guide.html  wininstall-guide.html  winuser-guide.html
c/include/openssl/: README
c/lib/openssl/: README
c/samples/: runconfig.sh
c/samples/client/interoptests/base/: InteropBaseClient.cpp  InteropTestPortType.cpp  InteropTestPortType.h  Makefile.am  SOAPStruct.h  runconfig
c/src/: Makefile.am
c/src/common/: ArrayBean.cpp  AxisConfig.cpp  AxisTime.cpp  AxisTrace.cpp  Packet.cpp  Param.cpp
c/src/engine/: AppScopeHandlerPool.cpp  Axis.cpp  AxisEngine.cpp  ClientAxisEngine.cpp  DeserializerPool.cpp  HandlerChain.cpp  HandlerLoader.cpp  HandlerPool.cpp  RequestScopeHandlerPool.cpp  SOAPTransportFactory.cpp  SOAPTransportFactory.h  SerializerPool.cpp  ServerAxisEngine.cpp  (+1 more)
c/src/server/apache/: ApacheTransport.h  Makefile.am  mod_axis.c
c/src/server/apache2/: Makefile.am  mod_axis2.c
contrib/ews/: maven.xml  project.xml
contrib/j2me/: readme.txt  todo.txt
java/: build.xml  release-notes.html
java/docs/: architecture-guide.html  install.html  reference.html  user-guide.html
site/deprecated/: build.xml
xmls/: properties.xml
(+1650 files in other folders)
